feat: Chapter 1 hello_world.c, CMake build system.
Use CMake to generate build files because I hate it less than Make itself.

--- a/clox/.gitignore
+++ b/clox/.gitignore
@@ -7,3 +7,17 @@ devenv.local.nix
 
 # pre-commit
 .pre-commit-config.yaml
+
+# CMake artifacts
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
